--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-api-crypto-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shahirkingali.github.io/react-api-crypto-tracker/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
